# distributed-stock-exchange-environment

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  simulationexample.xml
src/: echoserver.hpp  main.cpp  tcpconnection.hpp  tcpserver.cpp  tcpserver.hpp  udpserver.cpp  udpserver.hpp
src/agent/: agent.cpp  agent.hpp  agentfactory.hpp  agenttype.hpp  arbitragetrader.hpp  echoagent.hpp  exampletrader.hpp  exchangeagent.cpp  exchangeagent.hpp  marketdatawatcher.hpp  orchestratoragent.hpp  stockexchange.cpp  stockexchange.hpp  traderagent.cpp  traderagent.hpp  tradershvr.hpp  traderzic.hpp  traderzip.hpp
src/config/: agentconfig.hpp  arbitrageurconfig.hpp  configreader.cpp  configreader.hpp  exchangeconfig.hpp  marketwatcherconfig.hpp  simulationconfig.hpp  traderconfig.hpp  zipconfig.hpp
src/message/: cancel_order_message.hpp  cancel_reject_message.hpp  config_ack_message.hpp  config_message.hpp  event_message.hpp  exec_report_message.hpp  limit_order_message.hpp  market_data_message.hpp  market_order_message.hpp  message.hpp  messagetype.hpp  order_ack_message.hpp  subscribe_message.hpp
src/networking/: logserver.hpp  networkentity.cpp  networkentity.hpp  tcpconnection.cpp  tcpconnection.hpp  tcpserver.cpp  tcpserver.hpp  udpserver.cpp  udpserver.hpp
src/order/: limitorder.hpp  marketorder.hpp  order.hpp  orderbook.cpp  orderbook.hpp  orderfactory.hpp  orderqueue.cpp  orderqueue.hpp  trade.hpp  tradefactory.hpp
src/trade/: marketdata.hpp  trade.hpp  tradefactory.hpp
src/utilities/: csvprintable.hpp  csvwriter.hpp  syncqueue.cpp  syncqueue.hpp
